public/style.css
/* general stuff that should be everywhere */
.text-right{
    text-align:right;
}

.text-left{
    text-align:left;
}

.col-6,
.col-10,
.col-2{
    display:inline-block;
    vertical-align:top;
}

.col-6{
    width:49.5%;
}

.col-10{
    width:82%;
}

.col-2{
    width:16%;
}

/* page-related stuff */
body{
    background:#f8f8f8;
    font-family: sans-serif;
    padding:0;
    margin:10px;
}

h1{
    font-size:25px;
    font-weight:300;
    margin-right:40px;
    margin-left:10px;
    line-height:15px;
    color:#fff;
}

@media (max-width:500px){
    h1{
	font-size:15px;
	margin:5px;
    }
}

header{
    background:#88f;
    color:#fff;
    margin:0;
    padding:5px;
    margin:-10px;
    box-shadow:0 0 7px rgba(0,0,0,0.3);
    border-bottom:3px solid #33a;
    margin-bottom:20px;
}

@media (max-width:500px){
    header .col{
	display:block;
	width:100%;
    }
}

header a{
    color:#131;
    text-decoration:none;
}

.new-sheet-button{
    color:#fff;
}

template{
    display:none;
}

button{
    height:32px;
    margin-bottom:20px;
    margin-left:5px;
    margin-right:5px;
    margin-top:5px;
    border-radius:0;
    border:none;
    padding:5px;
    background:#55f;
    font-size:14px;
    color:#fff;
    box-shadow:0 0 8px rgba(0,0,0,0.2);
    border-radius:2px;
    cursor:pointer;
}

button:first-child{
    margin-left:0;
}

input{
    border-radius:3px;
    border:none;
    padding:0px 5px;
    background:#fff;
    box-shadow:0 0 8px rgba(0,0,0,0.2);
    height:32px;
}

h3{
    font-weight:300;
    font-size:120%;
    margin-left:0;
    margin:5px 0;
    text-shadow:1px 1px 0 #fff;
}

p{
    line-height:150%;
}

.doc code,
.doc pre{
    background:#fff;
    display:inline-block;
    margin:5px 0;
    padding:0 5px;
    box-shadow:0 0 8px rgba(0,0,0,0.2);
}

/* livecalc stuff */

.inline-block{
    display:inline-block;
    vertical-align:top;
}

.main-page{
    margin-left:10px;
    margin-right:10px;
}

@media (max-width:500px){
    .main-page{
	    margin-left:-5px;
	    margin-right:-5px;
    }
}

.livecalc-cell{
    background:#eee;
    padding-top:5px;
    padding-bottom:5px;
    margin-bottom:10px;
    border-radius:2px;
    box-shadow:0 0 8px #ddd;
    border:1px solid #ddd;
}

.livecalc fieldset{
    border:none;
    margin:0;
    padding:0;
    padding-top:5px;
}

.livecalc .livecalc-input{
    width: 100%;
    width: calc(100% - 150px);
    margin-left:10px;
    font-size:20px;
    margin-bottom:5px;
    border:none;
    background:#fff;
    box-shadow:0 0 3px rgba(0,0,0,0.2);
}

.livecalc .livecalc-output{
    margin-top:5px;
    margin-left:10px;
    margin-bottom:5px;
    margin-right:10px;
    min-height:20px;
    background:#fff;
    font-size:20px;
    padding:5px;
    padding-left:20px;
    border-radius: 2px;
}

.livecalc-go-button{
    height:32px;
    margin:0;
    margin-left:10px;
    width:100px;
    border-radius:0;
    border:none;
    padding:5px;
    background:#fff;
    color:#333;
    box-shadow:0 0 5px rgba(0,0,0,0.1);
}

.livecalc .users-info{
    text-align:right;
    font-size:11px;
    height:10px;
    margin:0 10px;
}

